--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "wouter": "^3.7.1"
+    "wouter": "^3.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
